--- a/templates/drive.html
+++ b/templates/drive.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="topNav">
-    <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px;">
+    <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px; max-width: 60%; overflow-x: hidden; white-space: nowrap">
         <svg onclick="on_click_open_sidebar()" xmlns="http://www.w3.org/2000/svg" fill="white"
              class="bi bi-list addButtonSVG"
              viewBox="0 0 448 512">
@@ -17,7 +17,7 @@
         {% if request_folder == "" %}
         <span class="folderPathFont" style="color: white;">/</span>
         {% else %}
-        <span class="folderPathFont" style="color: white; max-width: 60%; overflow-x: hidden; white-space: nowrap">{{request_folder}}</span>
+        <span class="folderPathFont" style="color: white; ">{{request_folder}}</span>
         {% endif %}
     </div>
     <div class="press-hover" id="add_button" onclick="on_click_add_button()"
