--- a/templates/drive.html
+++ b/templates/drive.html
@@ -112,6 +112,7 @@
                 </svg>
                 <span style="max-width: 70%; overflow: hidden; white-space: nowrap">{{element}}</span>
             </div>
+            {% if "~trash" not in element %}
             <div class="press-hover" onclick="on_click_edit('{{request_folder}}', '{{element}}')"
                  style="height: 100%; margin-right: 40px; min-width: 10%; display: flex; justify-content: flex-end; align-items: center;">
                 <button id="edit_x"
@@ -125,6 +126,7 @@
                     </svg>
                 </button>
             </div>
+            {% endif %}
         </div>
         {% endif %}
         {% endfor %}
