--- a/templates/drive.html
+++ b/templates/drive.html
@@ -20,7 +20,7 @@
         <span class="folderPathFont" style="color: white; ">{{request_folder}}</span>
         {% endif %}
     </div>
-    <div class="press-hover editButtonDesktop" id="add_button" onclick="on_click_add_button()"
+    <div class="press-hover" id="add_button" onclick="on_click_add_button()"
          style="margin-right: 40px; padding: 25px; display: flex; justify-content: flex-end; align-items: center;">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-plus addButtonSVG"
              viewBox="0 0 448 512" style="width: 100%; display: flex; justify-content: flex-end; align-items: center;">
