--- a/templates/drive.html
+++ b/templates/drive.html
@@ -8,7 +8,8 @@
 </head>
 
 <div class="topNav">
-    <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px; max-width: 70%; overflow-x: scroll; white-space: nowrap" class="no_scroll_bar">
+    <div style="display: flex; justify-content: flex-start; align-items: center; gap: 80px; margin-left: 40px; max-width: 70%; overflow-x: scroll; white-space: nowrap"
+         class="no_scroll_bar">
         <svg onclick="on_click_open_sidebar()" xmlns="http://www.w3.org/2000/svg" fill="white"
              class="bi bi-list addButtonSVG"
              viewBox="0 0 448 512">
@@ -75,6 +76,11 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
                      class="bi bi-file-earmark-fill folderIconSVG" viewBox="0 0 384 512">
                     <path d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM64 288c0-17.7 14.3-32 32-32h96c17.7 0 32 14.3 32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V288zM300.9 397.9L256 368V304l44.9-29.9c2-1.3 4.4-2.1 6.8-2.1c6.8 0 12.3 5.5 12.3 12.3V387.7c0 6.8-5.5 12.3-12.3 12.3c-2.4 0-4.8-.7-6.8-2.1z"/>
+                </svg>
+                {% elif ".pdf" in element.lower() %}
+                <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
+                     class="bi bi-file-earmark-fill folderIconSVG" viewBox="0 0 512 512">
+                    <path d="M0 64C0 28.7 28.7 0 64 0L224 0l0 128c0 17.7 14.3 32 32 32l128 0 0 144-208 0c-35.3 0-64 28.7-64 64l0 144-48 0c-35.3 0-64-28.7-64-64L0 64zm384 64l-128 0L256 0 384 128zM176 352l32 0c30.9 0 56 25.1 56 56s-25.1 56-56 56l-16 0 0 32c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-48 0-80c0-8.8 7.2-16 16-16zm32 80c13.3 0 24-10.7 24-24s-10.7-24-24-24l-16 0 0 48 16 0zm96-80l32 0c26.5 0 48 21.5 48 48l0 64c0 26.5-21.5 48-48 48l-32 0c-8.8 0-16-7.2-16-16l0-128c0-8.8 7.2-16 16-16zm32 128c8.8 0 16-7.2 16-16l0-64c0-8.8-7.2-16-16-16l-16 0 0 96 16 0zm80-112c0-8.8 7.2-16 16-16l48 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-32 0 0 32 32 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-32 0 0 48c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-64 0-64z"/>
                 </svg>
                 {% else %}
                 <svg xmlns="http://www.w3.org/2000/svg" fill="#18a8ff"
