--- a/templates/drive.html
+++ b/templates/drive.html
@@ -22,6 +22,7 @@
         <span class="folderPathFont" style="color: white; ">{{request_folder}}</span>
         {% endif %}
     </div>
+    {% if not "~trash" in request_folder %}
     <div class="press-hover addButtonDesktop" id="add_button" onclick="on_click_add_button()"
          style="margin-right: 40px; display: flex; justify-content: flex-end; align-items: center;">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-plus addButtonSVG"
@@ -30,6 +31,7 @@
                   d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/>
         </svg>
     </div>
+    {% endif %}
 </div>
 
 <body>
