--- a/templates/drive.html
+++ b/templates/drive.html
@@ -111,12 +111,11 @@
                 </button>
             </div>
         </div>
-        {% else %}
-        {% if "~trash" not in element %}
+        {% elif "~trash" not in element %}
         <div class="element">
             <div onclick="on_click_folder('{{request_folder}}', '{{element}}')"
                  style="display: flex; justify-content: flex-start; align-items: center; gap: 20px; padding: 20px; max-width: 80%; width: 80%">
-                {% if "~trash" not in element %}
+
                 <svg fill="#18a8ff" class="bi bi-folder-fill folderIconSVG"
                      viewBox="0 0 512 512">
                     <path d="M64 480H448c35.3 0 64-28.7 64-64V160c0-35.3-28.7-64-64-64H288c-10.1 0-19.6-4.7-25.6-12.8L243.2 57.6C231.1 41.5 212.1 32 192 32H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64z"/>
@@ -145,7 +144,6 @@
             </div>
 
         </div>
-        {% endif %}
         {% endif %}
         {% endfor %}
     </div>
